minor spacing issue

--- a/examples/default.css
+++ b/examples/default.css
@@ -386,22 +386,6 @@ pre code, pre tt {
   border: none;
 }
 
-/* Lit
-code span.kw { font-weight: bold; }
-code span.dt { color: red; }
-code span.dv { color: green; }
-code span.bn { color: blue; }
-code span.fl { color: yellow; }
-code span.ch { color: orange; }
-code span.st { color: light-blue; }
-code span.co { color: font-style: italic; }
-code span.ot { color: purple; }
-code span.al { color: pink; font-weight: bold; }
-code span.fu { color: grey; }
-code span.re { color: light-red; }
-code span.er { color: #222; font-weight: bold; }
- */
-
 /* Pygments */
 code span.kw { color: #007020; font-weight: bold; }
 code span.dt { color: #902000; }
